update swagger and returned data
