# controllers/authController.js
@@ -4,7 +4,7 @@ const jwt = require("jsonwebtoken");
 // const path = require("path");
 // const fs = require("fs/promises");
 // const Jimp = require("jimp");
-const { nanoid } = require("nanoid");
+// const { nanoid } = require("nanoid");
 
 const User = require("../models/User");
 
@@ -24,13 +24,11 @@ const register = async (req, res) => {
 
   const hashPassword = await bcryptjs.hash(password, 10);
   // const avatarURL = gravatar.url(email);
-  const verificationToken = nanoid();
 
   const newUser = await User.create({
     ...req.body,
     password: hashPassword,
     // avatarURL,
-    verificationToken,
   });
 
   // const verifyEmail = {
@@ -43,9 +41,8 @@ const register = async (req, res) => {
 
   res.status(201).json({
     user: {
-      name: newUser.name,
+      userName: newUser.userName,
       email: newUser.email,
-      // subscription: newUser.subscription,
     },
   });
 };
@@ -74,9 +71,25 @@ const login = async (req, res) => {
   res.json({
     token: token,
     user: {
+      userName: user.userName,
       email: user.email,
+      phone: user.phone,
+      birthday: user.birthday,
+      skype: user.skype,
+      avatarURL: user.avatarURL,
     },
   });
+};
+
+const updateUserProfile = async (req, res) => {
+  const { email } = req.body;
+  const user = await User.findOne({ email });
+
+  if (user) {
+    throw new HttpError(409, "Provided email already exists");
+  }
+
+  console.log("fine");
 };
 
 const logout = async (req, res) => {
@@ -90,6 +103,7 @@ module.exports = {
   register: ctrlWrapper(register),
   login: ctrlWrapper(login),
   // getCurrent: ctrlWrapper(getCurrent),
+  updateUserProfile: ctrlWrapper(updateUserProfile),
   logout: ctrlWrapper(logout),
   // updateAvatar: ctrlWrapper(updateAvatar),
   // verifyEmail: ctrlWrapper(verifyEmail),
