# swagger.json
@@ -121,9 +121,9 @@
     "schemas": {
       "RegistrationRequest": {
         "type": "object",
-        "required": ["name", "email", "password"],
+        "required": ["userName", "email", "password"],
         "properties": {
-          "name": {
+          "userName": {
             "type": "string",
             "description": "User's name",
             "example": "Artem"
@@ -146,7 +146,7 @@
           "user": {
             "type": "object",
             "properties": {
-              "name": {
+              "userName": {
                 "type": "string",
                 "description": "User's name",
                 "example": "Artem"
@@ -182,15 +182,39 @@
           "token": {
             "type": "string",
             "description": "Authentication token",
-            "example": "eyJhbGciOiJIPzI1NiIsInR5cCI6IkpXVCJ2.eyJpZCI6IjY0ZDRiNjQ3NWNlN2E5N2M5YWI3MzJjYyIsImlhdCI6MTY5MTY4MzQzMStiZXhwIjoxNjkxNzY2MjMxfQ.fSfADazWYfA3KK0GAL5YUWjlThxhJ1irmvwp0YLkqXY"
+            "example": "eyJhbGciOiJIUzI1N5cCI6IkpXVCJ9.eyJpZCI6IjY0ZDRiNjQ3NWNlN2E5N2M5YWI3MzJjYyIsImlhdCI6MTY5MTY4MzQzMjoxNjkxNzY2MjMxfQ.fSfADazWYfA3KK0GAlThxhJ1irmvwp0YLkqXY"
           },
           "user": {
             "type": "object",
             "properties": {
+              "userName": {
+                "type": "string",
+                "description": "User's name",
+                "example": "Artem"
+              },
               "email": {
                 "type": "string",
                 "description": "User's email",
                 "format": "email"
+              },
+              "phone": {
+                "type": "string",
+                "description": "User's phone",
+                "example": "38 (097) 256 34 77"
+              },
+              "birthday": {
+                "type": "string",
+                "description": "User's birthday",
+                "example": "25/08/1995"
+              },
+              "skype": {
+                "type": "string",
+                "description": "User's Skype",
+                "example": "Add a skype number (string)"
+              },
+              "avatarURL": {
+                "type": "string",
+                "description": "URL of the user's avatar"
               }
             }
           }
